--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form action="https://api.web3forms.com/submit" method="POST">
+                            <input type="hidden" name="access_key" value="fb5d0fa3-ac54-4848-b65d-15e32da32cc5">
+
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
